--- a/conf/settings.conf
+++ b/conf/settings.conf
@@ -1,4 +1,8 @@
 {
-  "port": 9000,
-  "n01": "127.0.0.1:30000"
+  "port01": 9000,
+  "n01": "127.0.0.1:30000",
+  "port02": 9001,
+  "n02": "127.0.0.1:40000",
+  "port03": 9002,
+  "n03": "127.0.0.1:50000"
 }
