tune with sleep-time to reduce livelock

--- a/conf/settings.conf
+++ b/conf/settings.conf
@@ -1,8 +1,6 @@
 {
-  "lp01": 9000,
-  "n01": "127.0.0.1:30000",
-  "lp02": 9001,
-  "n02": "127.0.0.1:40000",
-  "lp03": 9002,
-  "n03": "127.0.0.1:50000"
+  "port": 9000,
+  "n01": "59.66.130.181:30000",
+  "n02": "59.66.130.160:40000",
+  "n03": "59.66.130.46:50000"
 }
